<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reddyz.quiz.MainActivity"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:id="@+id/counter_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/good_luck"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/text_box_border"
        android:layout_weight="8">

        <TextView
            android:id="@+id/questions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/initial_note"
            android:textSize="25sp" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/choose_answers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/option_a_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/option_a"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/option_b_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/option_b"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <CheckBox
            android:id="@+id/option_c_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/option_c"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/option_d_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/option_d"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/start_next_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:onClick="processQuiz"
        android:text="@string/start" />

    <ScrollView
        android:id="@+id/result_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/text_box_border"
        android:layout_weight="4">

        <TextView
            android:id="@+id/results_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"/>
    </ScrollView>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:text="@string/reset"
        android:onClick="resetApp"/>

</LinearLayout>
